--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <script src="./lib/phaser.js"></script>
 
     <script src="./src/prefabs/player.js"></script>
-    <script src="./src/prefabs/obstacle.js"></script>
+    <script src="./src/prefabs/plane.js"></script>
 
     <script src="./src/scenes/load.js"></script>
     <script src="./src/scenes/menu.js"></script>
