--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <style media='screen', type='text/css'>
         @font-face {
             font-family: "primaryFont";
-            src: url('./assets/font/NECMobile.ttf');
+            src: url('./assets/font/comic.ttf');
         }
 
         canvas {
@@ -26,6 +26,7 @@
 
     <script src="./src/prefabs/player.js"></script>
     <script src="./src/prefabs/plane.js"></script>
+    <script src="./src/prefabs/cloud.js"></script>
 
     <script src="./src/scenes/load.js"></script>
     <script src="./src/scenes/menu.js"></script>
