Changed webpage background from white to dark blue

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>ORCA</title>
     
     <style media='screen', type='text/css'>
+
+        body {
+            background-color: darkblue;
+        }
         @font-face {
             font-family: "primaryFont";
             src: url('./assets/font/comic.ttf');
@@ -35,6 +39,7 @@
     
 </head>
 <body>
+
     <div style="font-family: 'primaryFont'">.</div>
     <script src="./src/main.js"></script>
 </body>
